test/pass/codegen_module_link_key.ms
@link("c_printf")
extern const printf := proc (fmt: Int) -> Int;
