test/fail/codegen_decorator_non_string_arg.ms
@link(42)
unsafe extern "C" proc numeric_arg();
